# geobatchpy

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-comprehensive.yml  ci-simple.yml  poetry-tests.yml
docs/: conf.py  example-batch.md  example-toy.md  example.md  external-inspire.md  index.md  index.rst  install.md  ref-batch.md  ref-cli.md  ref-client.md  ref-utils.md  references.md  requirements.txt  tutorial-enrich-locations.ipynb
geoapify/: __init__.py  _batch.py  batch.py  cli.py  client.py  utils.py
geobatchpy/: __init__.py  batch.py  boundaries.py  cli.py  client.py  utils.py
tests/: test_client.py  test_utils.py
