[tool.poetry]
name = "geoapify"
version = "0.1.2"
description = "Python client for geopify.com REST API."
authors = ["Paul Kinsvater <paul.kinsvater@gmail.com>", "Nikita Butsch <nikitabutsch@gmail.com>"]
keywords = ["geoapify", "geocoding"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kinsvater/geoapify"
repository = "https://github.com/kinsvater/geoapify"
include = [
    "LICENSE",
]

[tool.poetry.scripts]
geoapify = 'geoapify.cli:main'

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.28.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.3.1"
mkdocs-material = "^8.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
