[tool.poetry]
name = "geobatchpy"
version = "0.2.2"
description = "A CLI and Python Client for the Geoapify API."
authors = ["Paul Kinsvater <paul.kinsvater@gmail.com>", "Nikita Butsch <nikitabutsch@gmail.com>"]
keywords = ["geoapify", "geocoding", "openstreetmap", "geojson"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/huels-originals/geobatchpy"
repository = "https://github.com/huels-originals/geobatchpy"
include = [
    "LICENSE",
]

[tool.poetry.scripts]
geobatch = 'geobatchpy.cli:main'

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
requests = "^2.28.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
mkdocs = "^1.3.1"
mkdocs-material = "^8.5.3"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-click = "^0.8.0"
mkdocs-jupyter = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
